@@ -603,7 +603,7 @@ RECURSIVE              = NO
 # excluded from the INPUT source files. This way you can easily exclude a
 # subdirectory from a directory tree whose root is specified with the INPUT tag.
 
-EXCLUDE                = plotplt_r066.f90
+EXCLUDE                = src/plotplt_r066.f90 src/plotpltn.f90 src/plotpltp.f90
 
 # The EXCLUDE_SYMLINKS tag can be used select whether or not files or
 # directories that are symbolic links (a Unix filesystem feature) are excluded
