@@ -1,24 +1,21 @@
-!> Plotmdl.f90
-!!
-!! Plots the data contained in a mdl* file
-!! Uses PGPLOT window 2 to plot to
-!! AF, 19-05-2005
-!!
-!!   Copyright 2002-2010 AstroFloyd - astrofloyd.org
-!!   
-!!   
-!!   This file is part of the eggleton-plot package.
-!!   
-!!   This is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published
-!!   by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
-!!   
-!!   This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
-!!   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-!!   
-!!   You should have received a copy of the GNU General Public License along with this code.  If not, see 
-!!   <http://www.gnu.org/licenses/>.
-!<
+!> plotmdl.f90  Plots the data contained in a mdl* file
 
+!   Copyright 2002-2010 AstroFloyd - astrofloyd.org
+!   
+!   
+!   This file is part of the eggleton-plot package.
+!   
+!   This is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published
+!   by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
+!   
+!   This software is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+!   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+!   
+!   You should have received a copy of the GNU General Public License along with this code.  If not, see 
+!   <http://www.gnu.org/licenses/>.
+
+
+!> \brief Plot the data in the *.mdl? output file of ev
 program plotmdl  
   use kinds
   use constants
